--- a/cover.css
+++ b/cover.css
@@ -20,7 +20,7 @@ a:hover {
 }
 
 .colored-text {
- color: #FBC403; 
+ color: #FDC029; 
   
 } 
 
@@ -31,7 +31,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #171820;
 }
 
 body {
