--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -956,6 +956,13 @@ Features
     -webkit-border-radius: 50%;
 }
 
+
+.img1{
+    text-align: center;
+    object-fit: cover;
+    overflow: hidden;x  
+}
+
 #imgs{
     border-radius: 10px;
 }
@@ -1465,6 +1472,11 @@ Modal
     background: rgba(20, 31, 114, 0.6);
 }
 
+.modal-body{
+    padding-bottom: 0px !important;
+  
+}
+
 .login-modal .modal-dialog {
 
     position: relative;
@@ -1497,6 +1509,7 @@ Modal
 .login-modal .modal-header h3 {
     color: #181b3a;
     font-size: 22px;
+    margin-top: 50px;
     margin-bottom: 5px;
 }
 
@@ -1529,7 +1542,7 @@ Modal
     -o-border-radius: 50%;
     border-radius: 50%;
     cursor: pointer;
-    background-color: #8c6aff;
+    background-color: #FFB600;
 }
 
 .login-modal .form-group input[type="email"],
@@ -1563,7 +1576,7 @@ Modal
     line-height: 19px;
     right: 15px;
     font-size: 19px;
-    color: #8c6aff;
+    color: #FFB600;
 }
 
 .login-modal .modal-footer {
