--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,9 @@ h6 {
 }
 
 .modal-dialog {
-    width: 1000px;
+    width: 600px;
 }
+
 
 .protitle{
     text-align: center;
@@ -70,7 +71,7 @@ h6 {
 
 .prodesc{
     text-align: center;
-    padding: 0 20px;
+    padding: 0 2px;
 }
 
 h1 span,
@@ -840,9 +841,9 @@ About
 .text-content p,
 .icon-block p,
 .text-content-features p {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 400;
-    line-height: 1.8;
+    line-height: 1.5;
     color: #546e7a;
 }
 
@@ -876,6 +877,11 @@ About
 #about-app {
     position: relative;
     min-height: 630px;
+}
+
+#aboutme{
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .text-content {
