--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ General Styles
 
 body {
     font-family: 'MyWebFont', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     line-height: 26px;
     overflow-x: hidden;
     color: #181b3a;
@@ -146,7 +146,8 @@ img {
 
 p {
     font-weight: 400;
-    letter-spacing: 1.2px;
+    font-size: 20px;
+    line-height: 1.58;
 }
 
 hr.hr {
@@ -880,8 +881,9 @@ About
 }
 
 #aboutme{
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 20px;
+    line-height: 1.58;
+    font-weight: 400;
 }
 
 .text-content {
