--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,33 @@
+@media (min-height: 780px) {
+.hero-text {
+    text-align: center;
+    margin-top: 220px; 
+    
+}
+
+@media only screen and (min-height: 700px) {
+    .hero-text {
+        text-align: center;
+        
+        
+    }
+
+
+@media (min-height: 640px) {
+    .hero-text {
+        text-align: center;
+       
+        
+    }
+
+
+    @media (min-height: 480px) {
+        .hero-text {
+            text-align: center;
+            
+            
+        }
+
 @media only screen and (max-width: 767px) {
 
     .navbar-default {
