--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,13 @@ body {
     width: 180px;
 }
 
+.content-inner {
+    position: relative;
+    
+    width: 100%;
+    
+}
+
 h1,
 h2,
 h3,
@@ -190,6 +197,12 @@ hr.hr {
     position: relative;
     float: left;
     width: 48%;
+}
+
+.content-col-head {
+    position: relative;
+    float: left;
+    margin-left: 12%;
 }
 
 .content-col-right {
