--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Hk_Groteskregular', sans-serif;
+    font-family: 'Lato', sans-serif;
     margin-bottom: 10px;
     line-height: 48px;
     font-weight: 700;
