--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ hr.hr {
 }
 
 .bg-color-1 {
-    background: #171820;
+    background: #2e303c;
     background: -moz-linear-gradient(top, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
     background: -webkit-linear-gradient(top, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
     background: linear-gradient(to bottom, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
