--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,8 @@ body {
 }
 
 .head-subtitle{
-    font-size: 32px !important;
-    margin-top: 15px !important;
-    margin-bottom: 4px !important;
+    font-size: 15px !important;
+    
 }
 
 .head-subbtitle{
@@ -81,11 +80,16 @@ body {
 }
 
 .protitle{
-    padding: 0 10px;
+    padding: 0 5px;
+    margin-top: 12px;
+    margin-bottom: 0px;
+    font-weight: 600;
+    opacity: 0.85;
 }
 
 .prodesc{
-    padding: 0 10px;
+    padding: 0 5px;
+    opacity: 0.65;
 }
 
 .view-case{
@@ -106,6 +110,10 @@ body {
     
     width: 100%;
     
+}
+
+#project-text{
+    margin-top:100px;
 }
 
 h1,
@@ -134,11 +142,13 @@ h1 {
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 30px;
 }
 
 h3 {
-    font-size: 26px;
+    font-size: 24px;
+    line-height: 36px;
+    color: #000;
 }
 
 h4 {
@@ -372,13 +382,13 @@ hr.hr {
 
 .btn {
     padding: 15px 45px;
-    border-radius: 100px;
+    border-radius: 6px;
     font-size: 12px;
     border: none;
     font-weight: bold;
     color: #fff !important;
     text-transform: uppercase;
-    box-shadow: 0 10px 35px 2px rgba(61, 61, 61, .30);
+    /*box-shadow: 0 10px 35px 2px rgba(61, 61, 61, .30);*/
 }
 
 .btn:hover,
@@ -489,10 +499,10 @@ Navigation
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #fff !important;
+    color: #000 !important;
     padding: 5px 5px 4px;
-    font-size: 16px;
-    line-height: 32px;
+    font-size: 15px;
+    line-height: 21px;
     font-weight: 300;
     font-family: 'Hk_Groteskregular', sans-serif;
 }
@@ -503,6 +513,7 @@ Navigation
 
 .navbar-right {
     margin-right: 0;
+    margin-top: 10px;
 }
 
 .navbar-default {
@@ -572,12 +583,27 @@ header .navbar-default li.btn-login a:hover,
     box-shadow: 0 5px 25px 1px rgba(61, 61, 61, .2);
 }
 
+#about-tex{
+    margin-top: 220px;
+    width: 400px;
+}
+
+#aboutme{
+    margin-top: 25px;
+}
+
+#about-img{
+    padding: 10%;
+    box-shadow: none !important;
+}
+
 .affix {
     z-index: 999;
     border: none;
+    height: 90px;
     box-shadow: 0 3px 15px 0 rgba(0, 0, 0, .15);
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
 }
 
 .affix .navbar-nav > .active > a,
@@ -597,11 +623,20 @@ header .navbar-default li.btn-login a:hover,
 }
 
 .affix {
-    background: #171820;
-    background: -moz-linear-gradient(top, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
-    background: -webkit-linear-gradient(top, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
-    background: linear-gradient(to bottom, #171820 0%, #111219 0%, #171820 0%, #111219 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#171820', endColorstr='#111219', GradientType=0);
+    background: #fff;
+    
+}
+
+.affix .hero-text{
+    margin-top: 10px !important;
+}
+
+.affix .head-subtitle {
+    display: none;
+}
+
+.affix .right-aligned{
+    margin-top: -52px;
 }
 
 .affix .dropdown ul li a {
@@ -685,25 +720,45 @@ Hero
 }
 
 
+.right-aligned{
+    margin-top: -73px;
+    
+}
+
 .section-hero-inner .container {
     height: 100%;
 }
 
 .hero-text {
-    padding: 175px 0 145px 0;
+    text-align: center;
+   margin-top: 40px;
+    
+}
+
+.head-text {
+    
+    letter-spacing: 0.2rem;
+    margin-bottom: 0px !important;
+    margin-top: 0px !important;
+    
 }
 
 #hero-text1 {
     margin-top: -105px !important;
 }
 
+.first-row{
+    margin-top: 20px;
+}
 
-.section-hero-content .hero-text h1 {
-    font-size: 50px;
-    margin: 0 0 8px;
+
+.hero-text h1 {
+    font-size: 30px;
+   
     font-weight: 600;
-    color: #fff;
-    line-height: 60px;
+    color: #000;
+    line-height: 45px;
+    text-transform: uppercase;
 }
 
 .colored-text{
@@ -711,11 +766,10 @@ Hero
 }
 
 .hero-text p {
-    color: #fff;
+    color: #000;
     font-size: 24px;
-    line-height: 30px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    line-height: 21px;
+    
 }
 
 .arrow-down-btn a {
@@ -814,7 +868,7 @@ About
 .about-text h2,
 .text-content h2,
 .text-content-features h2 {
-    font-size: 42px;
+    font-size: 30px;
     margin-top: 0;
     margin-bottom: 25px;
     line-height: 45px;
@@ -826,10 +880,10 @@ About
 .text-content p,
 .icon-block p,
 .text-content-features p {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 300;
-    line-height: 1.67;
-    color: #637282;
+    line-height: 22px;
+    color: #000;
 }
 
 .icon-block {
@@ -844,6 +898,10 @@ About
 #work-box:hover img{
     transform: scale(1.07);
 
+}
+
+#work{
+    padding-top: 120px;
 }
 
 .icon-block:hover,
@@ -869,10 +927,19 @@ About
 
 #about-app {
     position: relative;
+
 }
 
 .text-content {
+    margin: 0 auto;
     padding-top: 30px;
+    width:1000px;
+}
+
+.text-content-1 {
+    margin: 0 auto;
+    padding-top: 10px;
+    width:800px;
 }
 
 /*----------------------------------------
@@ -1232,11 +1299,11 @@ Footer
 
 .footer {
     position: relative;
-    background: #2e303c;
+    background: #fff;
 }
 
 .footer-warpper {
-    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .footer-top-content h1 {
@@ -2005,10 +2072,10 @@ Signle post
 }
 
 .blog-text p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300;
-    line-height: 1.67;
-    color: #637282;
+    line-height: 24px;
+    color: #000;
 }
 
 .quote-blog p {
