--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,16 @@ h6 {
     font-weight: 700;
 }
 
+#contactinfo{
+    padding-right:10px;
+    text-decoration: underline;
+}
+
+#contactinfo1{
+    padding:0 10px;
+    text-decoration: underline;
+}
+
 h1 span,
 h2 span,
 h3 span,
