--- a/SavingsOak/Working/demo1/assets/css/style.css
+++ b/SavingsOak/Working/demo1/assets/css/style.css
@@ -341,7 +341,7 @@ Preloader page
     width: 56px;
     height: 56px;
     border: 8px solid rgba(171, 130, 253, 0.25);
-    border-top-color: #8665fe;
+    border-top-color: #1337B5;
     border-radius: 50%;
     position: relative;
     animation: rotate 1s linear infinite;
