--- a/savingsoak/working/demo0/assets/css/style.css
+++ b/savingsoak/working/demo0/assets/css/style.css
@@ -562,7 +562,7 @@ Hero
 ----------------------------------------*/
 
 .section-hero {
-    height: 100vh;
+    height: 90vh;
     padding-top: 80px;
     position: relative;
     padding-bottom: 80px;
@@ -643,7 +643,7 @@ About
 
 #about-app,
 #testimonials {
-    background-color: #f9f7ff;
+    background-color: #E4EFFF;
 }
 
 .section-about {
