--- a/savingsoak/working/demo0/assets/css/style.css
+++ b/savingsoak/working/demo0/assets/css/style.css
@@ -144,21 +144,18 @@ hr.hr {
 .content-col-left {
     position: relative;
     float: left;
-    width: 40%;
+    width: 60%;
 }
 
 .content-col-right {
     position: relative;
     float: right;
-    width: 60%;
+    width: 40%;
 }
 
 .bg-color-1 {
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #1155FB;
+    
 }
 
 /*-------margins padding--------*/
@@ -292,19 +289,16 @@ hr.hr {
 .btn-color:focus,
 .btn-color:active {
     color: #fff;
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #1155FB;
+   
 }
 
 .btn-white,
 .btn-white:hover,
 .btn-white:focus,
 .btn-white:active {
-    background-color: #fff;
-    color: #1337B5;
+    background-color: #1155FB;
+    color: #fff;
 }
 
 /*----------------------------------------
@@ -370,7 +364,7 @@ Navigation
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #fff;
+    color: #141414;
     padding: 5px 5px 4px;
     font-size: 16px;
     line-height: 32px;
@@ -388,11 +382,8 @@ Navigation
 
 .navbar-default {
     padding: 20px 15px;
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #fff;
+    
     border-color: transparent;
     -webkit-transition: all .5s ease .25s;
     transition: all .5s ease .25s;
@@ -482,11 +473,7 @@ header .navbar-default li.btn-login a:hover,
 }
 
 .affix {
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #1155FB;
 }
 
 .affix .dropdown ul li a {
@@ -562,11 +549,11 @@ Hero
 ----------------------------------------*/
 
 .section-hero {
-    height: 95vh;
+    height: 85vh;
     padding-top: 80px;
     position: relative;
     padding-bottom: 80px;
-    color: #fff;
+    background-color: #D7EBFF;
 }
 
 
@@ -575,19 +562,19 @@ Hero
 }
 
 .hero-text {
-    padding: 95px 0 75px 0;
+    padding: 75px 0 75px 0;
 }
 
 .section-hero-content .hero-text h1 {
-    font-size: 50px;
+    font-size: 48px;
     margin: 0 0 8px;
-    font-weight: 600;
-    color: #1337B5;
-    line-height: 60px;
+    font-weight: 700;
+    color: #141414;
+    line-height: 56px;
 }
 
 .hero-text p {
-    color: #03091D;
+    color: #545454;
     font-size: 24px;
     line-height: 30px;
     margin-top: 40px;
@@ -603,7 +590,7 @@ Hero
     position: relative;
     float: right;
     width: 100%;
-    max-width: 430px;
+    max-width: 710px;
 }
 
 .content-col-image {
@@ -611,8 +598,8 @@ Hero
     float: left;
     max-width: 100%;
     top: -20px;
-    padding-top: 20px;
-    right: -150px;
+    padding-top: 0px;
+    right: 0px;
 }
 
 a.video-btn {
@@ -623,7 +610,7 @@ a.video-btn {
 .video-btn i {
     font-size: 35px;
     position: absolute;
-    background: #1337B5;
+    background: #1155FB;
     color: #fff;
     margin-right: 5px;
     border-radius: 50%;
@@ -709,7 +696,7 @@ About
 
 .icon-block:hover,
 .icon-block:focus {
-    border-top: 4px solid #906dfe;
+    border-top: 4px solid #1155FB;
     padding: 40px;
     box-shadow: 0 10px 35px 2px rgba(61, 61, 61, .20);
     border-radius: 15px;
@@ -725,7 +712,7 @@ About
 .icon-block i {
     font-size: 40px;
     line-height: 45px;
-    color: #1337B5;
+    color: #1155FB;
 }
 
 #about-app {
@@ -884,13 +871,13 @@ Features accordation
 
 .tab-accordion .panel-heading a[aria-expanded="true"] {
     background-color: #fff;
-    color: #1337B5;
+    color: #1155FB;
     box-shadow: 0 7px 15px rgba(0, 9, 128, 0.05), 0 12px 28px rgba(0, 9, 128, 0.075);
 }
 
 .tab-accordion .panel-heading a:hover,
 .tab-accordion .panel-heading a:focus {
-    color: #ae85fd;
+    color: #1337B5;
     box-shadow: 0 3px 15px 0 rgba(0, 0, 0, .15);
     background-color: #fff;
 }
@@ -970,7 +957,7 @@ Testmonials
 .testimonial-caroussel.owl-theme .owl-dots .owl-dot.active span {
     width: 15px;
     height: 15px;
-    background: #1337B5;
+    background: #1155FB;
     margin: 3px 7px;
 }
 
@@ -1051,7 +1038,7 @@ Pricing
     font-size: 19px;
     letter-spacing: -0.9px;
     text-align: center;
-    color: #1337B5;
+    color: #1155FB;
     top: -1em;
 }
 
@@ -1059,7 +1046,7 @@ Pricing
     font-size: 65px;
     letter-spacing: -2px;
     text-align: center;
-    color: #1337B5;
+    color: #1155FB;
 }
 
 .content-plan sub {
@@ -1082,7 +1069,7 @@ Pricing
 .table-price .active .table-inner {
     border: none;
     box-shadow: 0 10px 35px 2px rgba(61, 61, 61, .20);
-    border-top: 4px solid #1337B5;
+    border-top: 4px solid #1155FB;
 }
 
 /*----------------------------------------
@@ -1189,11 +1176,8 @@ Footer
     height: 55px;
     padding: 0 15px 0 15px;
     color: #fff;
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #1155FB;
+    
 }
 
 .btn-subscribe:hover,
@@ -1207,11 +1191,8 @@ Footer
 }
 
 #scrollUp {
-    background: #2667FF;
-    background: -moz-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: -webkit-linear-gradient(top, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    background: linear-gradient(to bottom, #2667FF 0%, #1337B5 0%, #2667FF 0%, #1337B5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2667FF', endColorstr='#1337B5', GradientType=0);
+    background: #1155FB;
+   
     border-radius: 100%;
     bottom: 30px;
     color: #ffffff;
