footer logo updated

--- a/savingsoak/working/demo0/assets/css/style.css
+++ b/savingsoak/working/demo0/assets/css/style.css
@@ -1137,7 +1137,7 @@ Footer
 .list-social a {
     background-color: #fff;
     width: 40px;
-    color: #1337B5;
+    color: #1155FB;
     line-height: 40px;
     font-size: 16px;
     padding: 0;
