--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,26 @@
+@media only screen and (max-width: 420px) {
+
+    .hero-text{
+        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+            text-align: center;
+    }
+
+    h3{
+        font-size: 28px;
+        line-height: 150%;
+    }
+
+    .navbar-header{
+        margin: 0 20px !important;
+    }
+
+}
+
 @media only screen and (max-width: 767px) {
 
     .navbar-default {
@@ -8,16 +31,16 @@
     }
     .navbar-default .navbar-collapse,
     .navbar-default .navbar-form {
-        background-color: #fff;
+        background-color: #1C1F29;
         box-shadow: none;
     }
     .navbar-default .navbar-right > li:first-child {
-        margin-left: 15px !important;
+        margin-left: 20px !important;
     }
     .navbar-default .navbar-nav > .active > a,
     .navbar-default .navbar-nav > li > a {
         background-color: transparent;
-        color: #2e303c !important;
+        color: #fff !important;
     }
 
     .section-hero-inner {
@@ -66,8 +89,20 @@
         padding-top: 0;
     }
     .hero-text {
-        padding: 0 30px 75px 30px;
+        padding: 0 48px;
     }
+
+    .hero-text p {
+        color: #fff;
+        font-size: 14px;
+        line-height: 150%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        letter-spacing: 0.07rem;
+        opacity: 0.8;
+    }
+
+    
     .feature-col-inner .text-content {
         padding: 0 30px;
     }
@@ -296,42 +331,17 @@
     
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1100px) {
-    .navbar-default .navbar-right > li + li {
-        margin-left: 10px;
-    }
-
-    header .navbar-default li.btn-login {
-        margin-left: 40px;
-    }
-    .left-sidbar-blog .sidebar-side {
-        padding-right: 0;
-    }
-    .right-sidbar-blog .sidebar-side {
-        padding-left: 0;
-    }
-    .section-hero {
-        height: 100%;
-    }
-    .feature-col-right .col-image-inner {
-        width: 50%;
-    }
-    .feature-col-inner .text-content {
-        padding-left: 50px;
-    }
-    .content-col-image,
-    .testimonial-block .col-image-inner {
-        right: 0;
-    }
+@media only screen and (min-width: 1024px) and (max-width: 1920px) {
+   
     .hero-text {
-        padding: 95px 0 75px 40px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 30%;
+        transform: translate(-50%, -50%);
+        text-align: center;
     }
-    .feature-inner-right:after {
-        display: none;
-    }
-    .feature-col-inner {
-        padding: 35px;
-    }
+    
 
 }
 
