--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
     font-size: 15px;
     line-height: 26px;
     overflow-x: hidden;
-    color: #10141F !important;
+    color: #f2f2f2 !important;
 
     overflow: hidden;
   background: hsla(0, 5%, 5%, 1);
@@ -48,6 +48,12 @@ body {
   
   background-image: -moz-linear-gradient(to right top, hsla(0, 5%, 15%, 0.5), hsla(0, 5%, 5%, 1));
     
+}
+
+.img-thumbnail{
+    padding: 0px !important;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
 h1,
@@ -161,11 +167,11 @@ hr.hr {
 }
 
 .bg-color-1 {
-    background: #10141F;
-    background: -moz-linear-gradient(top, #10141F 0%, #10141F 0%, #10141F 0%, #10141F 100%);
-    background: -webkit-linear-gradient(top, #10141F 0%, #10141F 0%, #10141F 0%, #10141F 100%);
-    background: linear-gradient(to bottom, #10141F 0%, #10141F 0%, ##10141F 0%, #10141F 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#10141F', endColorstr='#10141F', GradientType=0);
+    background: #f2f2f2;
+    background: -moz-linear-gradient(top, #f2f2f2 0%, #f2f2f2 0%, #f2f2f2 0%, #f2f2f2 100%);
+    background: -webkit-linear-gradient(top, #f2f2f2 0%, #f2f2f2 0%, #f2f2f2 0%, #f2f2f2 100%);
+    background: linear-gradient(to bottom, #f2f2f2 0%, #f2f2f2 0%, ##f2f2f2 0%, #f2f2f2 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#f2f2f2', GradientType=0);
 }
 
 /*-------margins padding--------*/
@@ -316,7 +322,7 @@ hr.hr {
 
 .btn-link{
     font-size: 14px;
-    color: white;
+    color: hsl(0deg 0% 20%);
 }
 
 
@@ -398,7 +404,7 @@ Navigation
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #fff;
+    color: hsl(0deg 0% 20%);
     padding: 5px 5px 4px;
     font-size: 14px;
     line-height: 32px;
@@ -590,7 +596,7 @@ Hero
     padding-top: 80px;
     position: relative;
     padding-bottom: 80px;
-    color: #fff;
+    color: hsl(0deg 0% 20%);
 }
 
 
@@ -642,7 +648,7 @@ Hero
 }
 
 .hero-text p {
-    color: #fff;
+    color: hsl(0deg 0% 20%);
     font-size: 16px;
     line-height: 150%;
     margin-top: 10px;
