--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,12 @@
 
 .subtext {
   margin-top: 40px;
-  font-weight: 600;
+  font-weight: 400;
   color: rgba(255, 255, 255, 0.8);
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
   background-color: #040404;
   color: #fff;
   position: relative;
@@ -47,12 +47,12 @@ a {
 }
 
 a:hover {
-  color: #35e888;
+  color: #fff;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -97,7 +97,13 @@ h1, h2, h3, h4, h5, h6 {
 #header h2 span {
   color: #fff;
   border-bottom: 3px solid #FF501A;
-  padding-bottom: 6px;
+  padding-bottom: 2px;
+}
+
+#header p span {
+  color: #fff;
+  border-bottom: 3px solid #FF501A;
+  padding-bottom: 2px;
 }
 
 #header img {
@@ -131,8 +137,10 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #header h1 {
     font-size: 36px;
+    text-align: center;
   }
   #header h2 {
+    text-align: center;
     font-size: 20px;
     line-height: 30px;
   }
@@ -143,6 +151,22 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  #header p span {
+    border-bottom: 3px solid #FF501A;
+    padding-bottom: 0px;
+}
+
+#header p span:hover {
+  border-bottom: 3px solid #FF501A;
+  padding-bottom: 0px;
+}
+
+  .subtext{
+    text-align: center;
+    font-size: 16px;
+    line-height: 30px;
   }
 }
 
@@ -219,7 +243,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
@@ -397,6 +421,8 @@ section .container {
   font-weight: 700;
   font-size: 26px;
   color: #FF501A;
+  margin-top: 24px;
+  text-transform: uppercase;
 }
 
 .about-me .content ul {
@@ -463,7 +489,7 @@ section .container {
 .counts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 14px;
 }
 
@@ -675,6 +701,7 @@ section .container {
 .services .icon-box {
   text-align: center;
   background: rgba(204, 204, 204, 0.1);
+  cursor: pointer;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
 }
@@ -741,7 +768,7 @@ section .container {
 }
 
 .services .icon-box:hover .icon::before {
-  background: #35e888;
+  background: #000;
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
@@ -880,7 +907,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  color: #FF501A;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -1123,7 +1150,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #15bb62;
+  background: #FF501A;
 }
 
 @-webkit-keyframes animate-loading {
